# deer-age-api

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  app_og.py  index.html  jawbone_ensemble.pth  model_costs.xlsx  nixpacks.toml  pyproject.toml  railpack.json  requirements.txt
webpage backups/250828 - Working dashboard/: AI_analysis.html  dashboard.html  functions.php
webpage backups/AI analysis/: 2508120739_working_jawbone.html  2508120800_working_deer_crop_send.html  250818_working_crop_show_in_results.html
